Fix modal button spacing

--- a/css/modal.css
+++ b/css/modal.css
@@ -333,12 +333,11 @@
 
 
 .modal-button {
-
     width: 169px;
 
     height: 56px;
 
-    margin: 24px auto 0;
+    margin: 16px auto 0;
 
     border: none;
 
